--- a/gb/18/12/13/n10907650.md
+++ b/gb/18/12/13/n10907650.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/srvjih3150/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/srvjih3150/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/srvjih3150/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/srvjih3150/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/srvjih3150/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/srvjih3150/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/srvjih3150/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/srvjih3150/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/srvjih3150/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/srvjih3150/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/srvjih3150/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/srvjih3150/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/srvjih3150/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/srvjih3150/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/srvjih3150/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/srvjih3150/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/srvjih3150/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/srvjih3150/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/srvjih3150/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/srvjih3150/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/srvjih3150/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/srvjih3150/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/srvjih3150/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/srvjih3150/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>疑关门操作给亚马逊30亿 市府被市议会质询</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2018年12月13日讯】（大纪元记者施萍纽约报导）12月12日，对<ahref="https://github.com/srvjih3150/djy/blob/master/gb/tag/%E7%94%B5%E5%95%86.md#1">电商</a>巨鳄<ahref="https://github.com/srvjih3150/djy/blob/master/gb/tag/%E4%BA%9A%E9%A9%AC%E9%80%8A.md#1">亚马逊</a>要在长岛市建立第二总部一事感到愤怒的纽约人来到<ahref="https://github.com/srvjih3150/djy/blob/master/gb/tag/%E5%B8%82%E8%AE%AE%E4%BC%9A.md#1">市议会</a>，这里召开了针对此事的第一次公听会。市议员们轮番出场，质询代表市长的市经济发展公司（EDC）总裁和亚马逊代表，一系列尖锐的问题让对方明显招架不住了。</p>
-<figure id="10907655" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2018/12/5d9965240f1110dff27a6b67cb88c906-450x252.png" alt="亚马逊代表胡斯曼（中）和EDC总裁帕切特（右）在听证会上。" width="500" /><figcaption class="wp-caption-text"><ahref="https://github.com/srvjih3150/djy/blob/master/gb/tag/%E4%BA%9A%E9%A9%AC%E9%80%8A.md#1">亚马逊</a>代表胡斯曼（中）和EDC总裁帕切特（右）在听证会上。（<ahref="https://github.com/srvjih3150/djy/blob/master/gb/tag/%E5%B8%82%E8%AE%AE%E4%BC%9A.md#1">市议会</a>网站）</figcaption></figure>
+<p>【大纪元2018年12月13日讯】（大纪元记者施萍纽约报导）12月12日，对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%94%B5%E5%95%86.md#1">电商</a>巨鳄<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%9A%E9%A9%AC%E9%80%8A.md#1">亚马逊</a>要在长岛市建立第二总部一事感到愤怒的纽约人来到<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B8%82%E8%AE%AE%E4%BC%9A.md#1">市议会</a>，这里召开了针对此事的第一次公听会。市议员们轮番出场，质询代表市长的市经济发展公司（EDC）总裁和亚马逊代表，一系列尖锐的问题让对方明显招架不住了。</p>
+<figure id="10907655" aria-describedby="caption-10907655" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2018/12/5d9965240f1110dff27a6b67cb88c906-450x252.png" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2018/12/5d9965240f1110dff27a6b67cb88c906-450x252.png" alt="亚马逊代表胡斯曼（中）和EDC总裁帕切特（右）在听证会上。" width="500" /></a><figcaption id="caption-10907655" class="wp-caption-text"><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%9A%E9%A9%AC%E9%80%8A.md#1">亚马逊</a>代表胡斯曼（中）和EDC总裁帕切特（右）在听证会上。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B8%82%E8%AE%AE%E4%BC%9A.md#1">市议会</a>网站）</figcaption></figure>
 <p>诸多抗议者参加公听会，在EDC总裁帕切特（James Patchett）和亚马逊公共政策副总裁胡斯曼（Brian Huseman）作证前宣誓时，抗议者们打出横幅，怒吼“让亚马逊离开”等口号。他们质疑州长库默和市长白思豪，没有征求民众意见就批准亚马逊的第二总部进驻纽约长岛市，并强烈反对给亚马逊提供30亿美元的税收抵免和政府补贴。</p>
-<figure id="10907654" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2018/12/4a84cb48f403f1a5008cb316474d035d-450x250.png" alt="市议会经济发展委员会召开听证会拷问亚马逊总部项目为什么没有通过审核过程。" width="500" /><figcaption class="wp-caption-text">市议会经济发展委员会召开听证会拷问亚马逊总部项目为什么没有通过审核过程。（市议会网站）</figcaption></figure>
+<figure id="10907654" aria-describedby="caption-10907654" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2018/12/4a84cb48f403f1a5008cb316474d035d-450x250.png" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2018/12/4a84cb48f403f1a5008cb316474d035d-450x250.png" alt="市议会经济发展委员会召开听证会拷问亚马逊总部项目为什么没有通过审核过程。" width="500" /></a><figcaption id="caption-10907654" class="wp-caption-text">市议会经济发展委员会召开听证会拷问亚马逊总部项目为什么没有通过审核过程。（市议会网站）</figcaption></figure>
 <p>市府和亚马逊反复强调了这个项目给纽约人带来的好处，如将创造25,000个工作；为社区提供工作培训；以及投资学校和公共空间等。他们称目前项目只是开始阶段，他们今后还要和社区及市议会通力合作；亚马逊是纽约市“百年一见”的好项目，绝对会受到社区的欢迎等。</p>
 <p>议长张晟（Corey Johnson）毫不客气地表示，“我并没有感觉到这是一个开始阶段，而是结束的时候。”他问EDC：为什么这么大的项目要跳过ULURP（统一土地使用审查程序）？</p>
 <p>帕切特表示，根据“纽约州城市发展公司法案”（NYS Urban Development Corporation Act）的要求，“一般项目计划”（General Project Plan，GPP）可以跳过地方法规，直接提交市规划委投票。</p>
@@ -33,48 +33,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/7/26/n10590586.md#1">亚马逊2小时免费送货 扩至纽约多地</a></li>
-<li><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/9/10/n10703026.md#1">亚马逊无人超市 纽约市开店</a></li>
-<li><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/11/14/n10850103.md#1">亚马逊进驻纽约 将与谷歌争夺软件人才</a></li>
-<li><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/11/14/n10850507.md#1">亚马逊第二总部落户纽约   官员民代有支持有反对</a></li>
-<li><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/11/15/n10853228.md#1">亚马逊入纽约获30亿补贴 社区起反对声浪</a></li>
-<li><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/11/27/n10876374.md#1">亚马逊第二总部来纽约  商家居民持续抗议</a></li>
-<li><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/12/1/n10885061.md#1">纽约市长：给亚马逊的优惠非特例</a></li>
-<li><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/12/12/n10905305.md#1">纽约成立社区咨询委员会 助亚马逊总部计划</a></li>
-<li><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/12/12/n10905309.md#1">纽约市以知名房产 竞标亚马逊总部进驻</a></li>
-<li><a href="https://github.com/srvjih3150/djy/blob/master/gb/20/11/10/n12537882.md#1">纽约藏人共谍案 检方动用反间谍法蒐获证据</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/7/26/n10590586.md#1">亚马逊2小时免费送货 扩至纽约多地</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/9/10/n10703026.md#1">亚马逊无人超市 纽约市开店</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/11/14/n10850103.md#1">亚马逊进驻纽约 将与谷歌争夺软件人才</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/11/14/n10850507.md#1">亚马逊第二总部落户纽约   官员民代有支持有反对</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/11/15/n10853228.md#1">亚马逊入纽约获30亿补贴 社区起反对声浪</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/11/27/n10876374.md#1">亚马逊第二总部来纽约  商家居民持续抗议</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/1/n10885061.md#1">纽约市长：给亚马逊的优惠非特例</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/12/n10905305.md#1">纽约成立社区咨询委员会 助亚马逊总部计划</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/12/n10905309.md#1">纽约市以知名房产 竞标亚马逊总部进驻</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615478.md#1">曾伟康就职纽约中华公所主席</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/26/n10743859.md#1" target="_blank">古玉文：公私合营献产业 武百祥命陨红朝</a></li><li><a href="https://github.com/srvjih3150/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/19/n11462628.md#1" target="_blank">可心：香港警察有选择“枪口抬高一寸”的权利</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/14/n11587779.md#1" target="_blank">台北修炼心得交流会 法轮功学员谈身心改变</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/4/n12523568.md#1">【历史不简单】被预言选中的人：川普和曹操</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/9/30/n12442873.md#1">《圣经》与《推背图》预言的应验与变换7</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/9/30/n12442866.md#1">《圣经》与《推背图》预言的应验与变换6</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/10/20/n12488670.md#1">不知自己死了 一转生就能说话的张生有</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/10/30/n12512695.md#1">夫妻不叫老公老婆 怎表卿卿我我和礼敬？</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/9/n12537140.md#1">【热点互动】专访共和党委员：川普法律诉讼</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/9/n12536430.md#1">【珍言真语】曾志豪：香港第四权末日来到</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/10/n12537513.md#1">【远见快评】习配合演戏？左派翻盘蓄谋4年</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/8/n12533398.md#1">美联邦选举委员会主席：选举欺诈正在发生</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/7/n12531968.md#1">更多舞弊浮出水面 华人选民失望伤心</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/8/n12533345.md#1">大纪元声明：法律诉讼未决前 不宣布大选胜者</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/8/n12534699.md#1">唐绮阳预测凶厄之象：今年最后两个月很有事</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/8/n12534449.md#1">冯小刚白癜风疑变严重 斑秃明显头部起大包</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/6/n12531299.md#1">调侃蜡像逼真让孩子分不清 吴尊分享育儿经</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/8/n12533364.md#1">退货远征队捉弄刘在锡 合作结束献贵重惊喜</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/7/n12532528.md#1">《女巫们》影评：击败邪恶女巫 “老鼠”小兵立大功</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/6/n12530332.md#1">茼蒿是抗病毒、减肥的良伴 营养师推荐2吃法</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/8/n12533391.md#1">台18岁男子昏迷62天 听到“吃鸡排”醒了</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/8/n12533608.md#1">冬天到了！这款大衣专挑瘦子穿 胖妹不要选</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/11/4/n12525816.md#1">按按脚底保养全身！这样做排毒、护眼又改善过敏</a></li>
-<li><a href="https://github.com/boyxwb378/djy/blob/master/gb/20/10/23/n12497349.md#1">自卑的人易情感纠结 这些倾向你要当心了</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/srvjih3150/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/srvjih3150/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/12/13/n10907650.htm">疑关门操作给亚马逊30亿 市府被市议会质询</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/12/13/n10907650.htm">疑关门操作给亚马逊30亿 市府被市议会质询</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/srvjih3150/djy/blob/master/gb/18/12/13/n10907650.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/srvjih3150/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/srvjih3150/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/srvjih3150/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/srvjih3150/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/srvjih3150/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/12/13/n10907650.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
